--- a/app/src/main/res/layout/activity_virus_scan.xml
+++ b/app/src/main/res/layout/activity_virus_scan.xml
@@ -15,17 +15,27 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_centerInParent="true"
-            android:background="@drawable/virusscan_icon"/>
+            android:background="@drawable/virusscan_icon" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        android:id="@+id/tv_scanversion"
+        style="@style/textview16sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="25dp"
+        android:textColor="@color/white" />
+
+        <TextView
             android:id="@+id/tv_lastscantime"
             style="@style/textview16sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp"
-            android:textColor="@color/white"/>
+            android:layout_marginBottom="7dp"
+            android:textColor="@color/white" />
 
     </RelativeLayout>
 
